# api/auth/controller.go
@@ -3,6 +3,7 @@ package auth
 import (
 	"app/api/auth/dto"
 	"app/arch/network"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 	logger "github.com/sirupsen/logrus"
@@ -24,6 +25,7 @@ func CreateController(
 
 func (c *authController) AddRouters(group *gin.RouterGroup) {
 	group.POST("/registration", c.Registration)
+	group.POST("/login", c.Login)
 	group.POST("/authenticate", c.Authenticate)
 }
 
@@ -56,9 +58,9 @@ func (c *authController) Registration(ctx *gin.Context) {
 	c.Send(ctx).SuccessDataRes("Register user success", result)
 }
 
-// Authenticate godoc
-// @Summary Authenticate account
-// @Description Authenticate account using username and password
+// Login godoc
+// @Summary Login account
+// @Description Login account using username and password
 // @Tags Auth
 // @Accept json
 // @Produce json
@@ -66,8 +68,8 @@ func (c *authController) Registration(ctx *gin.Context) {
 // @Success 200 {object} dto.LoginRessponseDTO
 // @Failure 400 {object} network.apiError
 // @Failure 404 {object} network.apiError
-// @Router /api/v1/auth/authenticate [post]
-func (c *authController) Authenticate(ctx *gin.Context) {
+// @Router /api/v1/auth/login [post]
+func (c *authController) Login(ctx *gin.Context) {
 	var dto dto.LoginDTO
 
 	if err := ctx.ShouldBindJSON(&dto); err != nil {
@@ -83,4 +85,49 @@ func (c *authController) Authenticate(ctx *gin.Context) {
 	}
 
 	c.Send(ctx).SuccessDataRes("Register user success", loginData)
+}
+
+// Authenticate godoc
+// @Summary Authenticate using accessToken
+// @Description Authenticate using accessToken
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.User
+// @Failure 400 {object} network.apiError
+// @Failure 404 {object} network.apiError
+// @Router /api/v1/auth/authenticate [post]
+func (c *authController) Authenticate(ctx *gin.Context) {
+	c.service.Authenticate("2")
+	var rawToken string
+	rawToken = ctx.GetHeader("Authorization")
+	if rawToken == "" {
+		logger.Error("Missing token header")
+		c.Send(ctx).UnauthorizedEr("Unauthorized", nil)
+		return
+	}
+
+	logger.Info("Get rawToken from header: ", rawToken)
+
+	parts := strings.Split(rawToken, " ")
+	if len(parts) < 2 {
+		logger.Error("Token format is invalid")
+		c.Send(ctx).UnauthorizedEr("Unauthorized", nil)
+		return
+	}
+
+	accessToken := strings.Split(rawToken, " ")[1]
+	if accessToken == "" {
+		logger.Error("Token value is empty")
+		c.Send(ctx).UnauthorizedEr("Unauthorized", nil)
+		return
+	}
+
+	logger.Info("accessToken after handle: ", accessToken)
+	user, err := c.service.Authenticate(accessToken)
+	if err != nil {
+		c.Send(ctx).UnauthorizedEr("Unauthorized", err)
+		return
+	}
+	c.Send(ctx).SuccessDataRes("Login success", user)
 }
